v0.5.0/_sources/gallery/seismology/velo_arrow_ellipse.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/seismology/velo_arrow_ellipse.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_seismology_velo_arrow_ellipse.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_seismology_velo_arrow_ellipse.py:


Velocity arrows and confidence ellipses
---------------------------------------

The :meth:`pygmt.Figure.velo` method can be used to plot mean velocity arrows
and confidence ellipses. The example below plots red velocity arrows with
light-blue confidence ellipses outlined in red with the east_velocity x
north_velocity used for the station names. Note that the velocity arrows are
scaled by 0.2 and the 39% confidence limit will give an ellipse which fits
inside a rectangle of dimension east_sigma by north_sigma.

.. GENERATED FROM PYTHON SOURCE LINES 12-42



.. image-sg:: /gallery/seismology/images/sphx_glr_velo_arrow_ellipse_001.png
   :alt: velo arrow ellipse
   :srcset: /gallery/seismology/images/sphx_glr_velo_arrow_ellipse_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default


    import pandas as pd
    import pygmt

    fig = pygmt.Figure()
    df = pd.DataFrame(
        data={
            "x": [0, -8, 0, -5, 5, 0],
            "y": [-8, 5, 0, -5, 0, -5],
            "east_velocity": [0, 3, 4, 6, -6, 6],
            "north_velocity": [0, 3, 6, 4, 4, -4],
            "east_sigma": [4, 0, 4, 6, 6, 6],
            "north_sigma": [6, 0, 6, 4, 4, 4],
            "correlation_EN": [0.5, 0.5, 0.5, 0.5, -0.5, -0.5],
            "SITE": ["0x0", "3x3", "4x6", "6x4", "-6x4", "6x-4"],
        }
    )
    fig.velo(
        data=df,
        region=[-10, 8, -10, 6],
        pen="0.6p,red",
        uncertaintycolor="lightblue1",
        line=True,
        spec="e0.2/0.39/18",
        frame=["WSne", "2g2f"],
        projection="x0.8c",
        vector="0.3c+p1p+e+gred",
    )

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.917 seconds)


.. _sphx_glr_download_gallery_seismology_velo_arrow_ellipse.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: velo_arrow_ellipse.py <velo_arrow_ellipse.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: velo_arrow_ellipse.ipynb <velo_arrow_ellipse.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
